feat: upload to maven central in progress

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,29 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
+SONATYPE_AUTOMATIC_RELEASE=true
+
+
+GROUP=me.cnotify.cnotify_android_sdk
+POM_ARTIFACT_ID=cnotify_android_sdk
+VERSION_NAME=0.3.2
+
+POM_NAME=CNotify SDK
+POM_DESCRIPTION=    This SDK is used to connect the integration with cnotify.me. It provides functionality for handling push notifications and integrating with the cnotify.me service.
+POM_INCEPTION_YEAR=2024
+POM_URL=https://github.com/gasparhabif/cnotify-android-sdk/
+
+POM_LICENSE_NAME=MIT
+POM_LICENSE_URL=https://github.com/gasparhabif/cnotify-android-sdk/blob/main/LICENSE
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/gasparhabif/android-cnotifysdk/
+POM_SCM_CONNECTION=scm:git:git://github.com/gasparhabif/android-cnotifysdk.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/gasparhabif/android-cnotifysdk.git
+
+POM_DEVELOPER_ID=gasparhabif
+POM_DEVELOPER_NAME=Gaspar Habif
+POM_DEVELOPER_URL=https://github.com/gasparhabif/
